--- a/src/components/collection-item/Collection.module.css
+++ b/src/components/collection-item/Collection.module.css
@@ -1,32 +1,33 @@
-.collection-item {
+.collectionitem {
   width: 22%;
   display: flex;
   flex-direction: column;
   height: 350px;
   align-items: center;
 
-  .image {
+}
+
+.image {
     width: 100%;
     height: 95%;
     background-size: cover;
     background-position: center;
     margin-bottom: 5px;
-  }
+}
 
-  .collection-footer {
+.collectionfooter {
     width: 100%;
     height: 5%;
     display: flex;
     justify-content: space-between;
     font-size: 18px;
+}
 
-    .name {
+.name {
       width: 90%;
       margin-bottom: 15px;
-    }
+}
 
-    .price {
+.price {
       width: 10%;
-    }
-  }
 }
