--- a/src/components/collection-preview/Preview.module.css
+++ b/src/components/collection-preview/Preview.module.css
@@ -1,15 +1,16 @@
-.collection-preview {
+.collectionpreview {
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
+}
 
-  .title {
+.title {
     font-size: 28px;
     margin-bottom: 25px;
-  }
+}
 
-  .preview {
+.preview {
     display: flex;
     justify-content: space-between;
   }
-}
+
