--- a/src/components/form-input/Form.module.css
+++ b/src/components/form-input/Form.module.css
@@ -1,44 +1,47 @@
-$sub-color: grey;
+/*$sub-color: grey;
 $main-color: black;
 
 @mixin shrinkLabel {
   top: -14px;
   font-size: 12px;
   color: $main-color;
-}
+}*/
 
 .group {
   position: relative;
   margin: 45px 0;
+}
 
-  .form-input {
+  .forminput {
     background: none;
     background-color: white;
-    color: $sub-color;
+    color: grey;
     font-size: 18px;
     padding: 10px 10px 10px 5px;
     display: block;
     width: 100%;
     border: none;
     border-radius: 0;
-    border-bottom: 1px solid $sub-color;
+    border-bottom: 1px solid grey;
     margin: 25px 0;
+  }
 
-    &:focus {
+    .forminput:focus {
       outline: none;
     }
 
-    &:focus ~ .form-input-label {
-      @include shrinkLabel();
+    .forminput:focus ~ label {
+      top: -14px;
+  font-size: 12px;
+  color: black;
     }
-  }
 
   input[type='password'] {
     letter-spacing: 0.3em;
   }
 
-  .form-input-label {
-    color: $sub-color;
+  label {
+    color: grey;
     font-size: 16px;
     font-weight: normal;
     position: absolute;
@@ -46,9 +49,10 @@ $main-color: black;
     left: 5px;
     top: 10px;
     transition: 300ms ease all;
-
-    &.shrink {
-      @include shrinkLabel();
-    }
   }
-}
+
+    .shrink {
+      top: -14px;
+  font-size: 12px;
+  color: black;
+    }
