--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -4,8 +4,9 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+}
 
-  .logo-container {
+  .logocontainer {
     height: 100%;
     width: 70px;
     padding: 25px;
@@ -17,9 +18,9 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+  }
 
     .option {
       padding: 10px 15px;
     }
-  }
-}
+  
