--- a/src/components/menu-item/Menu.module.css
+++ b/src/components/menu-item/Menu.module.css
@@ -1,4 +1,4 @@
-.menu-item {
+.menuitem {
   min-width: 30%;
   height: 240px;
   flex: 1 1 auto;
@@ -8,33 +8,34 @@
   border: 1px solid black;
   margin: 0 7.5px 15px;
   overflow: hidden;
+}
 
-  &:hover {
+  .menuitem:hover {
     cursor: pointer;
+  }
 
-    & .background-image {
+  .backgroundimage {
       transform: scale(1.1);
       transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
 
-    & .content {
+  .content {
       opacity: 0.9;
     }
-  }
-
-  &.large {
+  
+  .large {
     height: 380px;
   }
 
-  &:first-child {
+  .menuitem:first-child {
     margin-right: 7.5px;
   }
 
-  &:last-child {
+  .menuitem:last-child {
     margin-left: 7.5px;
   }
 
-  .background-image {
+  .backgroundimage {
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -52,6 +53,7 @@
     background-color: white;
     opacity: 0.7;
     position: absolute;
+  }
 
     .title {
       font-weight: bold;
@@ -64,5 +66,4 @@
       font-weight: lighter;
       font-size: 16px;
     }
-  }
-}
+  
